--- a/.env
+++ b/.env
@@ -1,1 +1,8 @@
-NODE_ENV=development npx strapi develop
+HOST=0.0.0.0
+PORT=1337
+APP_KEYS="Wasting-Majesty4-Stunned,Sauna-Undercook-Sturdy2"
+API_TOKEN_SALT=Maverick4-Tanning-Explore
+ADMIN_JWT_SECRET=Thirsting9-Angelic-Proximity
+TRANSFER_TOKEN_SALT=Cartwheel8-Unpaved-Capsize
+JWT_SECRET=Erupt-Fidgeting-Footwork2
+NODE_ENV=development
